update application config to read variables from a file

--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,6 @@ build/
 
 ### VS Code ###
 .vscode/
+
+### credentials we don't want to upload to version control
+/src/main/resources/env.properties
