--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,19 @@
 spring.application.name=jar_api
+# import env.properties to use values we don't want in version control
+spring.config.import=file:src/main/resources/env.properties
+# properties below are meant to provide credentials for java to access mysql based on
+# https://www.twilio.com/en-us/blog/beginner-mysql-database-java-spring-boot#Create-the-model-class
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=${DB_CONNECTION_STRING}
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+##
+# trying to disable spring-security temporarily
+##
+security.basic.enabled=false
+management.security.enabled=false
+security.ignored=/**
